--- a/_pgbackup/index_1604942098.html
+++ b/_pgbackup/index_1604942098.html
@@ -45,7 +45,7 @@
                                 <div class="dimention-contenu carousel-item active animated zoomIn" style="min-height: 100vh;animation-delay: 0.6s;"> 
                                     <div class="row d-flex align-items-center container1-md d-md-flex align-items-md-center align-content-center align-content-md-center align-items-lg-center align-content-lg-center d-lg-flex"> 
                                         <!--image profil-->                                         
-                                        <div class="add-mini col-12 col-lg-3 col-md-8 float-left image image-xs offset-lg-2 offset-md-2" style="width: 70vh;"> 
+                                        <div class="add-mini col-12 col-lg-3 col-md-8 float-left image image-xs offset-lg-2 offset-md-2" style="padding-right: 2rem; width: 70vh;"> 
                                             <a href="#" class="align-items-center d-sm-flex flex-sm-column justify-content-center"> <div class="col-10 col-lg-10 col-md-10 col-sm-10 d-flex hvr-forward justify-content-end offset-0 offset-lg-1 offset-md-0 offset-sm-0"> 
                                                     <img alt="Dr. Mohammed Sayagh" src="image/mohammed_sayagh.jpeg" style="width: 130%; align-items: center; position: relative; justify-content: flex-end;" class="align-items-center d-flex justify-content-end"/> 
                                                 </div> </a> 
@@ -79,7 +79,7 @@
 /* min-height: 100vh */
 min-width: 100%; overflow: hidden;"> 
                                             <!--menu a propos-->                                             
-                                            <div class="align-content-sm-start align-content-start align-items-sm-start align-items-start backgroud-menu-xs bg-xs-menu col-lg-3 d-flex d-lg-flex d-sm-flex flex-nowrap flex-sm-nowrap haut-menu-xs justify-content-lg-between marge-md" style="grid-area: 1/1/2/2; padding: 3rem; z-index: 99;"> 
+                                            <div class="align-content-sm-start align-content-start align-items-sm-start align-items-start backgroud-menu-xs bg-xs-menu col-lg-3 d-flex d-lg-flex d-sm-flex flex-nowrap flex-sm-nowrap haut-menu-xs justify-content-lg-between marge-md" style="padding: 3rem; z-index: 99; height: 100vh; flex-direction: column; display: flex !important; align-items: center; justify-content: center;"> 
                                                 <div class="titre-conteneur bg-xs-menu"> 
                                                     <ul class="nav nav-tabs col-md-12 col-lg-12"> 
                                                         <!--
@@ -90,16 +90,16 @@ min-width: 100%; overflow: hidden;">
                                                         <li class="active titre hvr-wobble-horizontal nav-item col-lg-12 col-md-4 col-6 col-sm-6"> 
                                                             <a class="col-lg-12 nav-link" data-toggle="tab" rel="noreferrer" href="#Publications"> 
                                                             Publications </a> 
-                                                        </li>
+                                                        </li>                                                         
                                                         <li class="active titre hvr-wobble-horizontal nav-item col-lg-12 col-md-4 col-6 col-sm-6"> 
                                                             <a class="col-lg-12 nav-link" data-toggle="tab" rel="noreferrer" href="#Technical_Reports"> 
                                                             Technical Reports</a> 
-                                                        </li>   
+                                                        </li>                                                         
                                                         <!--                                     
                                                         <li class="titre hvr-wobble-horizontal nav-item col-lg-12 col-md-4 col-6 col-sm-6"> 
                                                             <a class="col-lg-12 nav-link" data-toggle="tab" rel="noreferrer" href="#Technical_Reports"> 
                                                             </a> 
-                                                        </li>   -->                                                      
+                                                        </li>   -->                                                         
                                                         <li class="titre hvr-wobble-horizontal nav-item col-lg-12 col-md-4 col-6 col-sm-6"> 
                                                             <a class="col-lg-12 nav-link" data-toggle="tab" rel="noreferrer" href="#Workshops"> 
                                                             Workshops </a> 
@@ -445,7 +445,7 @@ padding: 0;">
                             <div class="row"> 
                                 <div class="col-lg-10 col-md-12"> 
                                     <div class="col-info col-md-12 d-flex"> 
-                                        <a href="mailto:sayaghmohammed@gmail.com"> <p class="hvr-forward" style="margin: 0;"> Email: sayaghmohammed@gmail.com</p> </a> 
+                                        <a href="mailto:sayaghmohammed@gmail.com"> <p class="hvr-forward" style="margin: 0; font-size: 0.85em;"> Email: sayaghmohammed@gmail.com</p> </a> 
                                     </div>                                     
                                 </div>                                 
                             </div>                             
