--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 /* min-height: 100vh */
 min-width: 100%; overflow: hidden;"> 
                                             <!--menu a propos-->                                             
-                                            <div class="align-content-sm-start align-content-start align-items-sm-start align-items-start backgroud-menu-xs bg-xs-menu col-lg-3 d-flex d-lg-flex d-sm-flex flex-nowrap flex-sm-nowrap haut-menu-xs justify-content-lg-between marge-md" style="padding: 3rem; z-index: 99; height: 100vh; flex-direction: column; display: flex !important; align-items: center; justify-content: center;"> 
+                                            <div class="align-content-sm-start align-content-start align-items-sm-start align-items-start backgroud-menu-xs bg-xs-menu col-lg-3 d-flex d-lg-flex d-sm-flex flex-nowrap flex-sm-nowrap haut-menu-xs justify-content-lg-between marge-md" style="padding: 3rem; z-index: 99; height: 100vh; flex-direction: column; display: flex !important; align-items: center !important; justify-content: center !important;"> 
                                                 <div class="titre-conteneur bg-xs-menu"> 
                                                     <ul class="nav nav-tabs col-md-12 col-lg-12"> 
                                                         <!--
