--- a/_pgbackup/index_1604942523.html
+++ b/_pgbackup/index_1604942523.html
@@ -47,11 +47,11 @@
                                         <!--image profil-->                                         
                                         <div class="add-mini col-12 col-lg-3 col-md-8 float-left image image-xs offset-lg-2 offset-md-2" style="padding-right: 2rem; width: 70vh;"> 
                                             <a href="#" class="align-items-center d-sm-flex flex-sm-column justify-content-center"> <div class="col-10 col-lg-10 col-md-10 col-sm-10 d-flex hvr-forward justify-content-end offset-0 offset-lg-1 offset-md-0 offset-sm-0"> 
-                                                    <img alt="Dr. Mohammed Sayagh" src="image/mohammed_sayagh.jpeg" style="width: 130%; align-items: center; position: relative; justify-content: flex-end;" class="align-items-center d-flex justify-content-end"/> 
+                                                    <img alt="Dr. Mohammed Sayagh" src="image/mohammed_sayagh.jpeg" style="width: 130%; align-items: center; position: relative; box-shadow: 0px 6px 12px 4px #00000052; justify-content: flex-end;" class="align-items-center d-flex justify-content-end"/> 
                                                 </div> </a> 
                                         </div>                                         
                                         <!--text profil-->                                         
-                                        <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 0rem 0 3rem 0rem; overflow-x: hidden;"> 
+                                        <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 3rem 0 3rem 0rem; overflow-x: hidden;"> 
                                             <h3 style="left: 4%; position: relative; font-family: Roboto Condensed; text-transform: uppercase; font-weight: 400; font-size: 0.8em; color: #383838; letter-spacing: 0.25em;"> 
                                             Assistant Professor at ETS (Québec University).</h3> 
                                             <h1 style="padding: 0.6% 0 1% 0; font-size: 2.4em; left: 4%; font-family: Roboto Condensed; color: #383838; text-transform: uppercase; font-weight: 600; letter-spacing: 0.2em;"> 
@@ -79,7 +79,7 @@
 /* min-height: 100vh */
 min-width: 100%; overflow: hidden;"> 
                                             <!--menu a propos-->                                             
-                                            <div class="align-content-sm-start align-content-start align-items-sm-start align-items-start backgroud-menu-xs bg-xs-menu col-lg-3 d-flex d-lg-flex d-sm-flex flex-nowrap flex-sm-nowrap haut-menu-xs justify-content-lg-between marge-md" style="grid-area: 1/1/2/2; padding: 3rem; z-index: 99;"> 
+                                            <div class="align-content-sm-start align-content-start align-items-sm-start align-items-start backgroud-menu-xs bg-xs-menu col-lg-3 d-flex d-lg-flex d-sm-flex flex-nowrap flex-sm-nowrap haut-menu-xs justify-content-lg-between marge-md" style="padding: 3rem; z-index: 99; height: 100vh; flex-direction: column; display: flex !important; align-items: center !important; justify-content: center !important;"> 
                                                 <div class="titre-conteneur bg-xs-menu"> 
                                                     <ul class="nav nav-tabs col-md-12 col-lg-12"> 
                                                         <!--
@@ -432,7 +432,7 @@ padding: 0;">
                             <div class="row"> 
                                 <div class="col-lg-10 col-md-12"> 
                                     <div class="col-info col-md-12 d-flex"> 
-                                        <a href="mailto:sayaghmohammed@gmail.com"> <p class="hvr-forward" style="margin: 0; font-size: 0.8em;"> Email: sayaghmohammed@gmail.com</p> </a> 
+                                        <a href="mailto:sayaghmohammed@gmail.com"> <p class="hvr-forward" style="margin: 0; font-size: 0.85em;"> Email: sayaghmohammed@gmail.com</p> </a> 
                                     </div>                                     
                                 </div>                                 
                             </div>                             
