--- a/_pgbackup/index_1604942762.html
+++ b/_pgbackup/index_1604942762.html
@@ -47,11 +47,11 @@
                                         <!--image profil-->                                         
                                         <div class="add-mini col-12 col-lg-3 col-md-8 float-left image image-xs offset-lg-2 offset-md-2" style="padding-right: 2rem; width: 70vh;"> 
                                             <a href="#" class="align-items-center d-sm-flex flex-sm-column justify-content-center"> <div class="col-10 col-lg-10 col-md-10 col-sm-10 d-flex hvr-forward justify-content-end offset-0 offset-lg-1 offset-md-0 offset-sm-0"> 
-                                                    <img alt="Dr. Mohammed Sayagh" src="image/mohammed_sayagh.jpeg" style="width: 130%; align-items: center; position: relative; justify-content: flex-end;" class="align-items-center d-flex justify-content-end"/> 
+                                                    <img alt="Dr. Mohammed Sayagh" src="image/mohammed_sayagh.jpeg" style="width: 130%; align-items: center; position: relative; box-shadow: 0px 4px 12px 2px #00000032; justify-content: flex-end;" class="align-items-center d-flex justify-content-end"/> 
                                                 </div> </a> 
                                         </div>                                         
                                         <!--text profil-->                                         
-                                        <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 0rem 0 3rem 0rem; overflow-x: hidden;"> 
+                                        <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 3rem 0 3rem 0rem; overflow-x: hidden;"> 
                                             <h3 style="left: 4%; position: relative; font-family: Roboto Condensed; text-transform: uppercase; font-weight: 400; font-size: 0.8em; color: #383838; letter-spacing: 0.25em;"> 
                                             Assistant Professor at ETS (Québec University).</h3> 
                                             <h1 style="padding: 0.6% 0 1% 0; font-size: 2.4em; left: 4%; font-family: Roboto Condensed; color: #383838; text-transform: uppercase; font-weight: 600; letter-spacing: 0.2em;"> 
@@ -79,9 +79,7 @@
 /* min-height: 100vh */
 min-width: 100%; overflow: hidden;"> 
                                             <!--menu a propos-->                                             
-                                            <div class="align-content-sm-start align-content-start align-items-sm-start align-items-start backgroud-menu-xs bg-xs-menu col-lg-3 d-flex d-lg-flex d-sm-flex flex-nowrap flex-sm-nowrap haut-menu-xs justify-content-lg-between marge-md" style="
-/* grid-area: 1/1/2/2 */
-padding: 3rem; min-height: ; z-index: 99; height: 100vh; flex-direction: column; display: flex; align-items: center; justify-content: center;"> 
+                                            <div class="align-content-sm-start align-content-start align-items-sm-start align-items-start backgroud-menu-xs bg-xs-menu col-lg-3 d-flex d-lg-flex d-sm-flex flex-nowrap flex-sm-nowrap haut-menu-xs justify-content-lg-between marge-md" style="padding: 3rem; z-index: 99; height: 100vh; flex-direction: column; display: flex !important; align-items: center !important; justify-content: center !important;"> 
                                                 <div class="titre-conteneur bg-xs-menu"> 
                                                     <ul class="nav nav-tabs col-md-12 col-lg-12"> 
                                                         <!--
@@ -148,19 +146,30 @@ padding: 0;">
                                                             <div style="height: 5px; width: 2rem; background-color: #393e43; margin: 1.5rem 0 1.5rem 0.8rem;"> 
 </div>                                                             
                                                         </div>                                                         
-                                                        <p><em>Ibrahim, MH., Sayagh M., Hassan, AE.(2020).  <a href=""> 
+                                                        <p><em>Ibrahim, MH., Sayagh M., Hassan, AE.(2020). 
+ <a href=""> 
                                                             Too many images on DockerHub! How different are images for the same system?</a>, 
-                                                            Empirical Software Engineering (EMSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Sayagh M., Hassan, AE. (2020).  <a href=""> 
-                                                                ConfigMiner: Identifying the Appropriate Configuration Options for Config-related User Questions by Mining Online Forums </a>, Transactions on Software Engineering (TSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Li, H., Shang, W., Adams, B., Sayagh M., Hassan, AE. (2020).  <a href=""> 
+                                                            Empirical Software Engineering (EMSE).
+ <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
+                                                        <p><em>Sayagh M., Hassan, AE. (2020). 
+ <a href=""> 
+                                                                ConfigMiner: Identifying the Appropriate Configuration Options for Config-related User Questions by Mining Online Forums
+ </a>, Transactions on Software Engineering (TSE).
+ <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
+                                                        <p><em>Li, H., Shang, W., Adams, B., Sayagh M., Hassan, AE. (2020). 
+ <a href=""> 
                                                             A Qualitative Study of the Benefits and Costs of Logging from Developers' Perspectives</a>, 
-                                                            Transactions on Software Engineering (TSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Lee D., Rajbahadur, GK., Lin D., Sayagh M., Bezemer, CP., Hassan, AE. (2020).  <a href=""> 
-                                                            An Empirical Study of the Characteristics of Popular Minecraft Mods</a>, Empirical Software Engineering (EMSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Sayagh, M., Kerazi, N., Petrillo, F., Bennani, K., and Adams, B. (2020).  <a href=""> 
+                                                            Transactions on Software Engineering (TSE).
+ <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
+                                                        <p><em>Lee D., Rajbahadur, GK., Lin D., Sayagh M., Bezemer, CP., Hassan, AE. (2020). 
+ <a href=""> 
+                                                            An Empirical Study of the Characteristics of Popular Minecraft Mods</a>, Empirical Software Engineering (EMSE).
+ <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
+                                                        <p><em>Sayagh, M., Kerazi, N., Petrillo, F., Bennani, K., and Adams, B. (2020). 
+ <a href=""> 
                                                                 What should your run-time configuration framework do to help developers?</a>, 
-                                                            Empirical Software Engineering (EMSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
+                                                            Empirical Software Engineering (EMSE).
+ <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
                                                         <p><em>Sayagh, M., Kerazi, N., Adams, B. and Petrillo, F.(2018). <a href="http://mcis.polymtl.ca/publications/2019/tse.pdf">Software
                                                             Configuration Engineering in Practice -Interviews, Survey,
                                                             and Systematic Literature Review</a>, Transactions on
@@ -172,13 +181,15 @@ padding: 0;">
                                                         International
                                                         Working conference on Source Code Analysis and Manipulation,
                                                         SCAM (Shanghai, China).
-                                                        (Acceptance ratio: 14/31=45%)  <a href="http://mcis.polymtl.ca/publications/2017/scam17a.bib" rel="noreferrer" target="_blank"> BibTeX </a> </em></p> 
+                                                        (Acceptance ratio: 14/31=45%) 
+ <a href="http://mcis.polymtl.ca/publications/2017/scam17a.bib" rel="noreferrer" target="_blank"> BibTeX </a> </em></p> 
                                                         <!--paragraphe 2-->                                                         
                                                         <p><em> Sayagh, M., Kerzaki, N., Adams, B.(2017). <a href="pdf/On Cross-stack Configuration Errors.pdf" rel="noreferrer" target="_blank"> On Cross-stack Configuration
                                                             Errors </a>,
                                                         in Proceedings of the 39th International Conference on Software
                                                         Engineering, ICSE (Buenos Aires, Argentina).
-                                                        (Acceptance ratio: 68/398=17%)  <a href="http://mcis.polymtl.ca/publications/2017/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a></em></p> 
+                                                        (Acceptance ratio: 68/398=17%) 
+ <a href="http://mcis.polymtl.ca/publications/2017/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a></em></p> 
                                                         <!--paragraphe 3-->                                                         
                                                         <p><em>Hassan, S., King, Z., Hafiz, M.,Sayagh, M., Adams, B. and
                                                             Hindle, A. (2016). <a href="pdf/Energy Profiles of Java Collections Classes.pdf" rel="noreferrer" target="_blank">Energy
