--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ min-width: 100%; overflow: hidden;">
                                                             <a class="col-lg-12 nav-link" data-toggle="tab" rel="noreferrer" href="#Publications"> 
                                                             Publications </a> 
                                                         </li>                                                         
-                                                        <li class="active titre hvr-wobble-horizontal nav-item col-lg-12 col-md-4 col-6 col-sm-6"> 
+                                                        <li class="titre hvr-wobble-horizontal nav-item col-lg-12 col-md-4 col-6 col-sm-6"> 
                                                             <a class="col-lg-12 nav-link" data-toggle="tab" rel="noreferrer" href="#Technical_Reports"> 
                                                             Technical Reports</a> 
                                                         </li>                                                         
