--- a/_pgbackup/index_1604944823.html
+++ b/_pgbackup/index_1604944823.html
@@ -45,7 +45,10 @@
                                 <div class="dimention-contenu carousel-item active animated zoomIn" style="min-height: 100vh;animation-delay: 0.6s;"> 
                                     <div class="row d-flex align-items-center container1-md d-md-flex align-items-md-center align-content-center align-content-md-center align-items-lg-center align-content-lg-center d-lg-flex"> 
                                         <!--image profil-->                                         
-                                        <div class="add-mini cadreImage col-12 col-lg-3 col-md-8 float-left image image-xs offset-lg-2 offset-md-2" style="padding-right: 2rem; padding-bottom: 8%; width: 70vh;"> 
+                                        <div class="add-mini cadreImage col-12 col-lg-3 col-md-8 float-left image image-xs offset-lg-2 offset-md-2" style="padding-right: 2rem;
+
+/* padding-bottom: 2% */
+width: 70vh;"> 
                                             <a href="#" class="align-items-center d-sm-flex flex-sm-column justify-content-center"> <div class="col-10 col-lg-10 col-md-10 col-sm-10 d-flex hvr-forward justify-content-end offset-0 offset-lg-1 offset-md-0 offset-sm-0"> 
                                                     <img alt="Dr. Mohammed Sayagh" src="image/mohammed_sayagh.jpeg" style="width: 130%; align-items: center; position: relative; box-shadow: 0px 4px 12px 2px #00000032; justify-content: flex-end;" class="align-items-center d-flex justify-content-end"/> 
                                                 </div> </a> 
