--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                                         <div class="add-mini cadreImage col-12 col-lg-3 col-md-8 float-left image image-xs offset-lg-2 offset-md-2" style="padding-right: 2rem;
 
 /* padding-bottom: 2% */
-width: 70vh;"> 
+width: 70vh; min-height: 45vh;"> 
                                             <a href="#" class="align-items-center d-sm-flex flex-sm-column justify-content-center"> <div class="col-10 col-lg-10 col-md-10 col-sm-10 d-flex hvr-forward justify-content-end offset-0 offset-lg-1 offset-md-0 offset-sm-0"> 
                                                     <img alt="Dr. Mohammed Sayagh" src="image/mohammed_sayagh.jpeg" style="width: 130%; align-items: center; position: relative; box-shadow: 0px 4px 12px 2px #00000032; justify-content: flex-end;" class="align-items-center d-flex justify-content-end"/> 
                                                 </div> </a> 
                                         </div>                                         
                                         <!--text profil-->                                         
-                                        <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 0rem 0 0rem 0rem; overflow-x: hidden;"> 
+                                        <div class="add-mini arrier-blan col-12 col-lg-7 col-md-10 col-sm-12 col-xl-7 main offset-0 offset-lg-0 offset-md-2 offset-sm-0 offset-xl-0 padding" style="overflow-y: visible; padding: 0rem 0 0rem 0rem; overflow-y: scroll; -webkit-overflow-scrolling: touch; overflow-x: hidden;"> 
                                             <h3 style="left: 4%; position: relative; font-family: Roboto Condensed; text-transform: uppercase; font-weight: 400; font-size: 0.8em; color: #383838; letter-spacing: 0.25em;"> 
                                             Assistant Professor at ETS (Québec University).</h3> 
                                             <h1 style="padding: 0.6% 0 0.6% 0; font-size: 2.4em; left: 4%; font-family: Roboto Condensed; color: #383838; text-transform: uppercase; font-weight: 600; letter-spacing: 0.2em;"> 
