--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 /* padding-bottom: 2% */
 width: 70vh; min-height: 45vh;"> 
-                                            <a href="#" class="align-items-center d-sm-flex flex-sm-column justify-content-center"> <div class="col-10 col-lg-10 col-md-10 col-sm-10 d-flex hvr-forward justify-content-end offset-0 offset-lg-1 offset-md-0 offset-sm-0"> 
+                                            <a href="#" class="align-items-center d-sm-flex flex-sm-column justify-content-center"> <div class="col-10 col-lg-10 col-md-10 col-sm-10 d-flex hvr-forward justify-content-end justify-content-lg-end justify-content-sm-start offset-0 offset-lg-1 offset-md-0 offset-sm-0"> 
                                                     <img alt="Dr. Mohammed Sayagh" src="image/mohammed_sayagh.jpeg" style="width: 130%; align-items: center; position: relative; box-shadow: 0px 4px 12px 2px #00000032; justify-content: flex-end;" class="align-items-center d-flex justify-content-end"/> 
                                                 </div> </a> 
                                         </div>                                         
@@ -443,10 +443,14 @@ padding: 0;">
                     <div class=" align-content-lg-end align-items-lg-end barre-bas d-lg-flex flex-lg-row justify-content-lg-start orderPiedDeLaPage row rowPiedDeLaPage" style="bottom: 40px !important; width: 100%; height: 0%; display: flex; z-index: 99; flex-direction: column; position: absolute; align-items: flex-end; padding-left: 3rem; justify-content: flex-start; flex-wrap: wrap;"> 
                         <div class="align-content-between align-items-end col-12 col-lg-7 col-md-12 col-sm-12 column container-navigation d-flex flex-column justify-content-end orderPiedDeLaPage2" style="position: fixed; bottom: 0; z-index: 999; right: 0;"> 
                             <div class="align-content-lg-center align-content-md-center align-content-sm-center align-items-lg-center align-items-md-center align-items-sm-center carousel-control-prev col-lg-1 col-md-3 col-xl-1 columnFleche d-lg-flex d-md-flex d-sm-flex ele-nav flex-column flex-lg-column flex-md-column flex-sm-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center"> 
-                                <a href="#carousel" data-toggle="#carousel" role="button" data-slide="prev" aria-label="prev" class="fleche carousel-control-prev" style="min-height: 100%; min-width: 100%; display: flex; padding: 1.2rem 0; align-items: center; justify-content: center;"> <div class="avant careau-reseau flecheMobile1 hvr-grow"></div> </a> 
+                                <button href="#carousel" data-toggle="#carousel" role="button" type="button" aria-pressed="true" data-slide="prev" aria-label="prev" class="fleche carousel-control-prev" style="min-height: 100%; min-width: 100%; display: flex; padding: 1.2rem 0; align-items: center; justify-content: center;"> 
+                                    <div class="avant careau-reseau flecheMobile1 hvr-grow"></div>                                     
+                                </button>                                 
                             </div>                             
                             <div class="align-content-lg-center align-content-md-center align-items-lg-center align-items-md-center carousel-control-next col-lg-1 col-md-3 col-xl-1 columnFleche d-flex d-lg-flex d-md-flex d-sm-flex ele-nav flex-lg-column flex-md-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center">
-                                <a href="#carousel" data-toggle="#carousel" role="button" data-slide="next" aria-label="newt" class="fleche carousel-control-next" style="min-height: 100%; min-width: 100%; display: flex; padding: 1.2rem 0; align-items: center; justify-content: center;"> <div class="apres careau-reseau flecheMobile1 hvr-grow"></div> </a> 
+                                <button href="#carousel" data-toggle="#carousel" role="button" type="button" aria-pressed="true" data-slide="next" aria-label="newt" class="fleche carousel-control-next" style="min-height: 100%; min-width: 100%; display: flex; padding: 1.2rem 0; align-items: center; justify-content: center;"> 
+                                    <div class="apres careau-reseau flecheMobile1 hvr-grow"></div>                                     
+                                </button>                                 
                             </div>                             
                         </div>                         
                     </div>                     
