--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ padding: 0;">
                                 <a href="#carousel" role="button" data-slide="prev" aria-label="prev" class="fleche carousel-control-prev" style="min-height: 100%; min-width: 100%; display: flex; padding: 1.2rem 0; align-items: center; justify-content: center;"> <div class="avant careau-reseau flecheMobile1 hvr-grow"></div> </a> 
                             </div>                             
                             <div class="align-content-lg-center align-content-md-center align-items-lg-center align-items-md-center carousel-control-next col-lg-1 col-md-3 col-xl-1 columnFleche d-flex d-lg-flex d-md-flex d-sm-flex ele-nav flex-lg-column flex-md-column justify-content-center justify-content-lg-center justify-content-md-center justify-content-sm-center">
-                                <a href="#carousel" role="button" data-slide="next" aria-label="newt" class="fleche carousel-control-next" style="justify-content: center; min-height: 100%; min-width: 100%; padding: ; display: flex; padding: 1.2rem; align-items: center;"> <div class="apres careau-reseau fleche2 hvr-grow"></div> </a> 
+                                <a href="#carousel" role="button" data-slide="next" aria-label="newt" class="fleche carousel-control-next" style="justify-content: center; min-height: 100%; min-width: 100%; display: flex; padding: 1.2rem; align-items: center;"> <div class="apres careau-reseau fleche2 hvr-grow"></div> </a> 
                             </div>                             
                         </div>                         
                     </div>                     
