--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ padding: 0;">
                                                             and Systematic Literature Review</a>, Transactions on
                                                         Software Engineering (TSE).<a href="http://mcis.polymtl.ca/publications/2019/tse.bib" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
                                                         <p><em>Sayagh, M., Dong, Z., Andrzejak, A., and Adams,
-                                                            B.(2017). <a rel="noreferrer" href="pdf/Does the Choice of Configuration Framework Matter for Developers.pdf"> 
+                                                            B.(2017). <a rel="noreferrer" target="_blank" href="pdf/Does the Choice of Configuration Framework Matter for Developers.pdf"> 
                                                             Does the Choice of configuration Framework Matter for
                                                             Developers? </a>, in Proceedings of the 17th IEEE
                                                         International
