--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ width: 70vh; min-height: 45vh;">
                                             I have a wide range of research interests that are related to software empirical studies. My main focus is related to
                                             software variability in multi-component softawre systems.
                                             I have applied different qualitative and quantitative empricial studies techniques to my research, such as mining software repositories (e.g., source code repositories, online forums, and DockerHub), source code
-                                            analysis (e.g., Slicing), and machine learning. <bold>I am currently looking for motivated and hard working PhD and Masters students. </bold></p> 
+                                                analysis (e.g., Slicing), and machine learning.</p>
+                                            <h4>I am currently looking for motivated and hard working PhD and Masters students. </h4>
                                         </div>                                         
                                     </div>                                     
                                 </div>                                 
