--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@ padding: 0;">
                                                         </div>                                                         
                                                         <p>Talks:</p> 
                                                         <ul> 
+                                                            <li>
+                                                                CSER 2020 (New Faculty Talk): Supporting the Creation and Operation of Multi-component Systems
+                                                            </li>
                                                             <li> 
                                                                 CSER 2017: An Exploratory Study On Software
                                                                 Configuration
