--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700italic,700,500italic,500,400italic,300italic,300,100italic,100"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"> 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ68CD5WKC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EQ68CD5WKC');
+</script>
     </head>     
     <body style="background: rgba(238,238,238,1);"> 
         <!--CONTENEUR TOTAL-->         
