--- a/index.html
+++ b/index.html
@@ -320,6 +320,9 @@ padding: 0;">
                                                         <p> </p> 
                                                         <ul> 
                                                             <li> 
+                                                                <a href="https://dl.acm.org/journal/tosem" rel="noreferrer" target="_blank">ACM Transactions on Software Engineering and Methodology (TOSEM)</a> 
+                                                            </li>  
+                                                            <li> 
                                                                 <a href="https://link.springer.com/journal/10664" rel="noreferrer" target="_blank">Empirical Software Engineering
                                                                 (EMSE)</a> 
                                                             </li>                                                             
