--- a/index.html
+++ b/index.html
@@ -381,24 +381,28 @@ padding: 0;">
 </div>                                                             
                                                             <div style="height: 5px; width: 2rem; background-color: #393e43; margin: 1.5rem 0 1.5rem 0.8rem;"> 
 </div>                                                             
-                                                        </div>                                                         
+                                                        </div>  
+                                                        <p>Winter 2021:</p>
+                                                        <ul>
+                                                            <li><a href="https://www.etsmtl.ca/etudes/cours/log680/" rel="noreferrer" target="_blank">LOG680: Intorduction to the DevOps approach</a></li>
+                                                        </ul>
                                                         <p>Fall 2019:</p> 
                                                         <ul> 
                                                             <li>Lecturer of the courses:
-                                                                <a href="https://sailhome.cs.queensu.ca/~msayagh/CISC_850_Engineering_ULSS_Fall_2019.html" rel="noreferrer" target="_blank">CISC 850 </a>and
+                                                                <a href="https://sailhome.cs.queensu.ca/~msayagh/CISC_850_Engineering_ULSS_Fall_2019.html" rel="noreferrer" target="_blank">CISC 850: Engineering of Ultra-large-scale systems </a>and
                                                             </li>                                                             
                                                         </ul>                                                         
                                                         <p>Winter 2018:</p> 
                                                         <ul> 
                                                             <li>Lecturer of the courses:
-                                                                <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000 </a>and
-                                                                <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=inf3710" rel="noreferrer" target="_blank">INF3710</a> 
+                                                                <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000: Introduction to Software Engineering </a>and
+                                                                <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=inf3710" rel="noreferrer" target="_blank">INF3710: Databases</a> 
                                                             </li>                                                             
                                                         </ul>                                                         
                                                         <p>Automn 2017:</p> 
                                                         <ul> 
                                                             <li>Lecturer of the course:
-                                                                <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000</a> 
+                                                                <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000: Introduction to Software Engineering </a> 
                                                             </li>                                                             
                                                             <li>Teacher assistant:
                                                                 <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=INF2010" rel="noreferrer" target="_blank">INF2010</a> 
