--- a/index.html
+++ b/index.html
@@ -388,14 +388,14 @@ padding: 0;">
                                                         </ul>
                                                         <p>Fall 2019:</p> 
                                                         <ul> 
-                                                            <li>Lecturer of the courses:
-                                                                <a href="https://sailhome.cs.queensu.ca/~msayagh/CISC_850_Engineering_ULSS_Fall_2019.html" rel="noreferrer" target="_blank">CISC 850: Engineering of Ultra-large-scale systems </a>and
+                                                            <li>Lecturer of the course:
+                                                                <a href="https://sailhome.cs.queensu.ca/~msayagh/CISC_850_Engineering_ULSS_Fall_2019.html" rel="noreferrer" target="_blank">CISC 850: Engineering of Ultra-large-scale systems </a>
                                                             </li>                                                             
                                                         </ul>                                                         
                                                         <p>Winter 2018:</p> 
                                                         <ul> 
                                                             <li>Lecturer of the courses:
-                                                                <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000: Introduction to Software Engineering </a>and
+                                                                <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000: Introduction to Software Engineering </a><br>
                                                                 <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=inf3710" rel="noreferrer" target="_blank">INF3710: Databases</a> 
                                                             </li>                                                             
                                                         </ul>                                                         
