--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ padding: 0;">
                                                         <p>Winter 2018:</p> 
                                                         <ul> 
                                                             <li>Lecturer of the courses:
-                                                                <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000: Introduction to Software Engineering </a><br>
+                                                                <br><a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=log1000" rel="noreferrer" target="_blank">LOG1000: Introduction to Software Engineering </a><br>
                                                                 <a href="http://www.polymtl.ca/etudes/cours/details.php?sigle=inf3710" rel="noreferrer" target="_blank">INF3710: Databases</a> 
                                                             </li>                                                             
                                                         </ul>                                                         
