update mcis link

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ width: 70vh; min-height: 45vh;">
                                             I'm an assistant professor at Ecole Technologie Supérieur - Québec University. Before that, I was working as a PostDoc fellow in <a href="http://sail.cs.queensu.ca" rel="noreferrer" target="_blank"> the Software Analysis and Intelligence Lab (SAIL) </a>at <a href="http://queensu.ca" target="_blank"> Queen's University
                                                 (Kingston, ON) </a> 
                                             under the suppervision of <a href="http://research.cs.queensu.ca/home/ahmed/home/" rel="noreferrer" target="_blank"> 
-                                                Prof. Ahmed E. Hassan. </a> I obtained my Ph.D. from <a href="http://mcis.polymtl.ca/" rel="noreferrer" target="_blank"> the Maintenance,
+                                                Prof. Ahmed E. Hassan. </a> I obtained my Ph.D. from <a href="http://mcis.cs.queensu.ca/" rel="noreferrer" target="_blank"> the Maintenance,
                                                 Construction, and Intellligence of Software lab (MCIS) </a> at <a href="http://polymtl.ca" rel="noreferrer" target="_blank"> Ecole
-                                                Polytechnique (Montréal, QC)</a> under the supervision of <a href="http://mcis.polymtl.ca/bram.html" target="_blank" rel="noreferrer"> Prof.
+                                                Polytechnique (Montréal, QC)</a> under the supervision of <a href="http://mcis.cs.queensu.ca/bram.html" target="_blank" rel="noreferrer"> Prof.
                                                 Bram Adams. </a> 
                                             I have a wide range of research interests that are related to software empirical studies. My main focus is related to
                                             software variability in multi-component softawre systems.
@@ -174,10 +174,10 @@ padding: 0;">
                                                         <p><em>Sayagh, M., Kerazi, N., Petrillo, F., Bennani, K., and Adams, B. (2020).  <a href="pdf/EMSE2020_config2code.pdf" rel="noreferrer" target="_blank"> 
                                                                 What should your run-time configuration framework do to help developers?</a>, 
                                                             Empirical Software Engineering (EMSE). <a href="" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
-                                                        <p><em>Sayagh, M., Kerazi, N., Adams, B. and Petrillo, F.(2018). <a href="http://mcis.polymtl.ca/publications/2019/tse.pdf" rel="noreferrer" target="_blank">Software
+                                                        <p><em>Sayagh, M., Kerazi, N., Adams, B. and Petrillo, F.(2018). <a href="http://mcis.cs.queensu.ca/publications/2019/tse.pdf" rel="noreferrer" target="_blank">Software
                                                             Configuration Engineering in Practice -Interviews, Survey,
                                                             and Systematic Literature Review</a>, Transactions on
-                                                        Software Engineering (TSE).<a href="http://mcis.polymtl.ca/publications/2019/tse.bib" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
+                                                        Software Engineering (TSE).<a href="http://mcis.cs.queensu.ca/publications/2019/tse.bib" rel="noreferrer" arget="_blank"> BibTeX </a> </em></p> 
                                                         <p><em>Sayagh, M., Dong, Z., Andrzejak, A., and Adams,
                                                             B.(2017). <a rel="noreferrer" target="_blank" href="pdf/Does the Choice of Configuration Framework Matter for Developers.pdf"> 
                                                             Does the Choice of configuration Framework Matter for
@@ -185,20 +185,20 @@ padding: 0;">
                                                         International
                                                         Working conference on Source Code Analysis and Manipulation,
                                                         SCAM (Shanghai, China).
-                                                        (Acceptance ratio: 14/31=45%)  <a href="http://mcis.polymtl.ca/publications/2017/scam17a.bib" rel="noreferrer" target="_blank"> BibTeX </a> </em></p> 
+                                                        (Acceptance ratio: 14/31=45%)  <a href="http://mcis.cs.queensu.ca/publications/2017/scam17a.bib" rel="noreferrer" target="_blank"> BibTeX </a> </em></p> 
                                                         <!--paragraphe 2-->                                                         
                                                         <p><em> Sayagh, M., Kerzaki, N., Adams, B.(2017). <a href="pdf/On Cross-stack Configuration Errors.pdf" rel="noreferrer" target="_blank"> On Cross-stack Configuration
                                                             Errors </a>,
                                                         in Proceedings of the 39th International Conference on Software
                                                         Engineering, ICSE (Buenos Aires, Argentina).
-                                                        (Acceptance ratio: 68/398=17%)  <a href="http://mcis.polymtl.ca/publications/2017/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a></em></p> 
+                                                        (Acceptance ratio: 68/398=17%)  <a href="http://mcis.cs.queensu.ca/publications/2017/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a></em></p> 
                                                         <!--paragraphe 3-->                                                         
                                                         <p><em>Hassan, S., King, Z., Hafiz, M.,Sayagh, M., Adams, B. and
                                                             Hindle, A. (2016). <a href="pdf/Energy Profiles of Java Collections Classes.pdf" rel="noreferrer" target="_blank">Energy
                                                             Profiles of Java Collections Classes, </a> in Proceedings of
                                                         the 38th International Conference
                                                         on Software Engineering, ICSE (Austin, TX, US).
-                                                        (Acceptance ratio: 101/530=19%) <a href="http://mcis.polymtl.ca/publications/2016/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a> 
+                                                        (Acceptance ratio: 101/530=19%) <a href="http://mcis.cs.queensu.ca/publications/2016/icse.bib" rel="noreferrer" target="_blank"> BibTeX </a> 
                                                             (ACM SIGSOFT
                                                         Distinguished Paper Award)</em></p> 
                                                         <!--paragraphe 4-->                                                         
@@ -219,7 +219,7 @@ padding: 0;">
                                                         Conference
                                                         on Source Code Analysis and Manipulation, SCAM (Bremen,
                                                         Germany). (Acceptance
-                                                        ratio: 24/68=35%) <a href="http://mcis.polymtl.ca/publications/2015/scam15a.bib" rel="noreferrer" target="_blank"> BibTeX </a> [ <a rel="noreferrer" href="http://mcis.polymtl.ca/~msayagh/Paper/SCAM15/LOC_vs_Options/" target="_blank">Additional figures</a> 
+                                                        ratio: 24/68=35%) <a href="http://mcis.cs.queensu.ca/publications/2015/scam15a.bib" rel="noreferrer" target="_blank"> BibTeX </a> [ <a rel="noreferrer" href="http://mcis.cs.queensu.ca/~msayagh/Paper/SCAM15/LOC_vs_Options/" target="_blank">Additional figures</a> 
                                                         ] </em></p> 
                                                     </div>                                                     
                                                     <!--Technical Reports-->                                                     
